--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://alinzlami.github.io/gameShop/",
+  "homepage": "https://alinzlami.github.io/gameShop",
   "name": "gameshop",
   "version": "0.1.0",
   "private": true,
