--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-router-dom": "^7.7.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.5",
-    "react-video-js-player": "^1.1.1",
+    "video.js": "^8.23.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -45,6 +45,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.21",
     "gh-pages": "^6.3.0",
-    "postcss": "^8.5.6"
+    "postcss": "^8.5.6",
+    "video-js": "^0.7.0"
   }
 }
